--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,23 @@ div.projectHeading {
     align-self: stretch;
     border-bottom: 1px solid #E0E0E0;
 }
+button.projectHeading{
+    display: flex;
+    padding: 0px 8px;
+    align-items: center;
+    gap: 4px;
+    border-radius: 8px;
+    background: #3E8AFB;
+    color:#FFF;
+    font-family: Assistant, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 32px;
+}
+button.projectHeading:hover{
+    background-color: #4278ca;
+}
 div.projectContent{
     display: flex;
     height: 907px;
