--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,43 @@ button.projectHeading{
     font-weight: 600;
     line-height: 32px;
 }
+
+h1.generateHero{
+    color: var(--Product-Primary, #212936);
+    font-family: "SF Pro Display";
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 40px; /* 83.333% */
+}
+h4.generateHero{
+    color: var(--Product-Primary, #212936);
+    font-family: "SF Pro Text";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 100% */
+}
+@media screen and (max-width: 768px) {
+    h1.generateHero{
+        font-size: 36px;
+    }
+    h4.generateHero{
+        font-size: 16px;
+    }
+}
+div.generateHero{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+div div.generateHero{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
 button.projectHeading:hover{
     background-color: #4278ca;
 }
