--- a/src/App.css
+++ b/src/App.css
@@ -111,9 +111,12 @@ h4.generateHero{
 }
 div.generateHero{
     display: flex;
+    padding-bottom: 32px;
     flex-direction: column;
     align-items: center;
-    gap: 8px;
+    gap: 16px;
+    align-self: stretch;
+    border-bottom: 1px solid var(--Product-Medium-Gray, #E0E0E0);
 }
 div div.generateHero{
     display: flex;
@@ -123,6 +126,53 @@ div div.generateHero{
 }
 button.projectHeading:hover{
     background-color: #4278ca;
+}
+input.generateInput{
+    flex: 1 0 0;
+    display: flex;
+    padding: 12px 12px 24px 12px;
+    width: 100%;
+    align-items: center;
+    align-content: center;
+    gap: 8px;
+    align-self: stretch;
+    flex-wrap: wrap;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px; /* 114.286% */
+    color: var(--Brand-Primary, #3E8AFB);
+    font-family: "SF Pro Text";
+    border-radius: 8px;
+    background: var(--Brand-Secondary, #F2F7FF);
+}
+form.generateForm{
+    display: flex;
+    min-width:500px;
+    max-width: 600px;
+    padding: 16px 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1px solid var(--Product-Medium-Gray, #E0E0E0);
+    background: #FFF;
+}
+button.submitButton{
+    display: flex;
+    padding: 2px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 4px;
+    border: 1px solid #E0E0E0;
+    background: #FFF;
+    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.05);
+}
+button.submitButton:hover{
+    background-color: #e4eefd;
 }
 div.projectContent{
     display: flex;
