--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,88 @@ h4.generateHero{
         font-size: 16px;
     }
 }
+div.lowerRow{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+    flex: 1 0 0;
+}
+.toggle {
+    --color: chartreuse;
+    appearance: none;
+    position: relative;
+    font-size: 1em;
+    width: 2.5em;
+    aspect-ratio: 2.5;
+    border-radius: 100vmax;
+    box-shadow:
+      inset 0 0.2em 0.2em -0.1em #1233,
+      inset 0 -0.2em 0.2em -0.1em #fff,
+      inset 0 0 0 0.2em #f0f0f5,
+      inset 0 0em 0.05em 0.2em #000c,
+      inset 0.05em 0.1em 0.1em 0.1em #0008;
+      ;
+    background:
+      linear-gradient(#0000, #fff4 20%, #0005 80%),
+      linear-gradient(90deg, var(--color) 50%, #eee 0);
+    
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 32%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 100vmax;
+      width: 58%;
+      height: 85%;
+      box-shadow: 
+        0 0 0.075em #1234,
+        0.05em 0.1em 0.1em #2247;
+      background: linear-gradient(135deg, #f0f0f5, #ccd);
+      transition: left 0.5s;
+      border: 1px solid #0000;
+      box-sizing: border-box;
+    }
+    
+    &::after {
+      -webkit-mask:
+        radial-gradient(farthest-side, #000 85%, #0000 0) 0 0 / 50% 100%;
+      background:
+        linear-gradient(to bottom right, #d2d9e1 20%, #f4f5f7 80%) 0 0 / 50% 100% no-repeat,
+        linear-gradient(to bottom right, #bbc, #f0f0f5 80%) 100% 0 / 50% 100% no-repeat;
+    }
+    
+    &:checked {
+      &::before, &::after {
+        left: 68%;
+      }
+    }
+    
+    &[disabled] {
+      opacity: 0.25;
+    }
+  }
+  
+  @media print {
+    .toggle {
+      &, &::before, &::after {
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
+      }
+    }
+  }
+  
+  @media (prefers-reduced-motion) {
+    .toggle {
+      &, &::before, &::after {
+        transition: none !important;
+        animation: none !important;
+      }
+    }
+  }
+  
 div.generateHero{
     display: flex;
     padding-bottom: 32px;
