--- a/client/src/App.css
+++ b/client/src/App.css
@@ -355,8 +355,8 @@ form.generateForm{
     max-width: 600px;
     padding: 16px 24px;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /*justify-content: center;
+    align-items: center;*/
     gap: 8px;
     align-self: stretch;
     border-radius: 8px;
@@ -366,8 +366,8 @@ form.generateForm{
 button.submitButton{
     display: flex;
     padding: 2px;
-    justify-content: center;
-    align-items: center;
+    justify-content: right;
+    align-items: right;
     gap: 10px;
     border-radius: 4px;
     border: 1px solid #E0E0E0;
